--- a/RecipeBox/DetailImageCell.xib
+++ b/RecipeBox/DetailImageCell.xib
@@ -8,18 +8,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailImageCell" rowHeight="198" id="8wP-gw-gdy" customClass="DetailImageCell" customModule="RecipeBox" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailImageCell" rowHeight="226" id="8wP-gw-gdy" customClass="DetailImageCell" customModule="RecipeBox" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8wP-gw-gdy" id="6J8-z8-PU9">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oYe-be-XYm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="147"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="175" id="XK1-vY-OLi"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S52-c4-HEB">
-                        <rect key="frame" x="8" y="156" width="347" height="33"/>
+                        <rect key="frame" x="8" y="184" width="347" height="33"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
@@ -47,7 +50,7 @@
                 <outlet property="DetailImage" destination="oYe-be-XYm" id="sCy-N0-Hr4"/>
                 <outlet property="DetailTitle" destination="S52-c4-HEB" id="nQ6-Fv-XBg"/>
             </connections>
-            <point key="canvasLocation" x="128.2608695652174" y="139.28571428571428"/>
+            <point key="canvasLocation" x="128.2608695652174" y="148.66071428571428"/>
         </tableViewCell>
     </objects>
 </document>
