summary is retrieved successfully

--- a/RecipeBox/DetailImageCell.xib
+++ b/RecipeBox/DetailImageCell.xib
@@ -21,7 +21,7 @@
                             <constraint firstAttribute="height" constant="175" id="XK1-vY-OLi"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S52-c4-HEB">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S52-c4-HEB">
                         <rect key="frame" x="8" y="184" width="347" height="33"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
