--- a/RecipeBox/Base.lproj/Main.storyboard
+++ b/RecipeBox/Base.lproj/Main.storyboard
@@ -141,9 +141,7 @@
                                                     <rect key="frame" x="15" y="8" width="156" height="140"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="156" id="4y9-Hk-ZZS"/>
-                                                        <constraint firstAttribute="height" constant="170" id="KYJ-Uf-dOm"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="170" id="KnR-Br-CwU"/>
-                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="cCC-ml-Rh9"/>
+                                                        <constraint firstAttribute="height" constant="160" id="eP6-Ly-isX"/>
                                                         <constraint firstAttribute="width" constant="156" id="hp4-fn-d9H"/>
                                                     </constraints>
                                                 </imageView>
@@ -218,6 +216,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="sectionIndexBackgroundColor" red="0.99484437699999995" green="0.94826608899999998" blue="0.84429597850000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <connections>
                             <outlet property="dataSource" destination="0cV-ar-gub" id="b24-Fo-tFe"/>
                             <outlet property="delegate" destination="0cV-ar-gub" id="NZA-Gb-5yu"/>
@@ -261,14 +260,14 @@
                         <color key="backgroundColor" red="0.99484437699999995" green="0.94826608899999998" blue="0.84429597850000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" tag="100" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" indentationWidth="10" reuseIdentifier="ingredientCell" id="0Zc-A8-2hg">
-                                <rect key="frame" x="16" y="49.5" width="343" height="47"/>
+                                <rect key="frame" x="16" y="49.5" width="343" height="46.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Zc-A8-2hg" id="rUc-pR-XuH">
-                                    <rect key="frame" x="0.0" y="0.0" width="343" height="47"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="46.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="200" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycb-Wz-11V">
-                                            <rect key="frame" x="24" y="11" width="42" height="24.5"/>
+                                            <rect key="frame" x="24" y="11" width="42" height="24"/>
                                             <accessibility key="accessibilityConfiguration" identifier="ingredientLabel"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
@@ -289,14 +288,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" tag="101" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" indentationWidth="10" reuseIdentifier="yourIngredientCell" id="u3t-iE-Qje">
-                                <rect key="frame" x="16" y="96.5" width="343" height="47"/>
+                                <rect key="frame" x="16" y="96" width="343" height="46.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="u3t-iE-Qje" id="fpJ-so-irX">
-                                    <rect key="frame" x="0.0" y="0.0" width="343" height="47"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="46.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="201" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XS7-QE-8Ht">
-                                            <rect key="frame" x="25" y="11" width="42" height="24.5"/>
+                                            <rect key="frame" x="25" y="11" width="42" height="24"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
                                                     <attributes>
